keycloak.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: keycloak
   namespace: keycloak
 spec:
   ports:
     - name: http
       port: 80
       targetPort: 8080
   selector:
     app: keycloak
   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
