gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: demo-config
            items:
              - key: application-gateway-config.yaml
                path: application-gateway-config.yaml
      containers:
        - name: gateway
          image: docker.io/minhtb213/gateway-service
          volumeMounts:
            - mountPath: /opt/app-config
              name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: gateway-service
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30333
      name: gateway
      protocol: TCP
