demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: demo-project
    http:
      paths:
      - path: /test-service/api/v1/test/get-name
        pathType: Prefix
        backend:
          service:
            name: demo-project-service
            port:
              number: 80
